unpackaged/main/default/objects/CampaignMember/fields/Direct_Dial_Phone__c.field-meta.xml
<CustomField>
    <fullName>Direct_Dial_Phone__c</fullName>
    <formula>Contact.Direct_Dial_Phone__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Direct Dial Phone</label>
    <type>Text</type>
</CustomField>