unpackaged/main/default/objects/CampaignMember/fields/Do_Not_Prospect__c.field-meta.xml
<CustomField>
    <fullName>Do_Not_Prospect__c</fullName>
    <formula>Contact.Do_Not_Prospect__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Do Not Prospect</label>
    <type>Checkbox</type>
</CustomField>