unpackaged/main/default/objects/CampaignMember/fields/Email_Click_URL__c.field-meta.xml
<CustomField>
    <fullName>Email_Click_URL__c</fullName>
    <label>Email Click URL</label>
    <length>1500</length>
    <type>LongTextArea</type>
</CustomField>