unpackaged/main/default/objects/CampaignMember/fields/Employment_Status__c.field-meta.xml
<CustomField>
    <fullName>Employment_Status__c</fullName>
    <formula>TEXT(Contact.Employment_Status__c)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Employment Status</label>
    <type>Text</type>
</CustomField>