unpackaged/main/default/objects/CampaignMember/recordTypes/Marketo_Campaign_Member.recordType-meta.xml
<RecordType>
    <fullName>Marketo_Campaign_Member</fullName>
    <active>true</active>
    <description>Campaign members added via Marketo sync</description>
    <label>Marketo Campaign Member</label>
</RecordType>